[package]
name = "devicecheck_reproducible"
version = "0.1.0"
authors = ["Ana Bujan <ana@eisberg-labs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.116"
serde_json = "1.0.57"
reqwest = { version = "0.10.8", features = ["json", "blocking"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
